package NYT.NHive.NProto;

import "yt/core/misc/guid.proto";
import "yt/core/misc/error.proto";

////////////////////////////////////////////////////////////////////////////////

message TReqCommitSimpleTransaction
{
    required NYT.NProto.TGuid transaction_id = 1;
    required NYT.NProto.TGuid mutation_id = 2;
    required int64 commit_timestamp = 3;
}

message TReqCommitDistributedTransactionPhaseOne
{
    required NYT.NProto.TGuid transaction_id = 1;
    required NYT.NProto.TGuid mutation_id = 2;
    repeated NYT.NProto.TGuid participant_cell_ids = 3;
    required int64 prepare_timestamp = 4;
}

message TReqPrepareTransactionCommit
{
    required NYT.NProto.TGuid transaction_id = 1;
    required int64 prepare_timestamp = 2;
    required NYT.NProto.TGuid coordinator_cell_id = 3;
}

message TReqOnTransactionCommitPrepared
{
    required NYT.NProto.TGuid transaction_id = 1;
    required NYT.NProto.TGuid participant_cell_id = 2;
    required NYT.NProto.TError error = 3;
}

message TReqCommitDistributedTransactionPhaseTwo
{
    required NYT.NProto.TGuid transaction_id = 1;
    required int64 commit_timestamp = 2;
}

message TReqCommitPreparedTransaction
{
    required NYT.NProto.TGuid transaction_id = 1;
    required int64 commit_timestamp = 2;
}

// Not to be confused with TReqAbortTransaction from RPC.
message TReqHydraAbortTransaction
{
    required NYT.NProto.TGuid transaction_id = 1;
    required NYT.NProto.TGuid mutation_id = 2;
    optional bool force = 3 [default = false];
}

////////////////////////////////////////////////////////////////////////////////
